--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://3348b92e-96da-4bf8-817a-a3c0b8146786.preview.emergentagent.com
 WDS_SOCKET_PORT=443
